--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-template",
+  "name": "cycle-template",
   "version": "1.0.0",
   "main": "src/index.js",
   "author": "tana-gh <yozoranotakaku@gmail.com>",
@@ -10,7 +10,10 @@
     "build": "webpack --config ./build/webpack.prod.config.js"
   },
   "dependencies": {
-    "@babel/runtime": "^7.9.0"
+    "@babel/runtime": "^7.9.0",
+    "@cycle/dom": "^22.4.0",
+    "@cycle/run": "^5.4.0",
+    "xstream": "^11.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
