Change build command

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "jest",
     "dev": "webpack-dev-server --config ./build/webpack.dev.config.js",
-    "build": "webpack --config ./build/webpack.prod.config.js"
+    "build": "rm -rf dist && webpack --config ./build/webpack.prod.config.js"
   },
   "dependencies": {
     "@babel/runtime": "^7.9.0",
